# decomon

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  tox.ini  versions.json
.github/workflows/: build-doc.yml  deploy-doc.yml  python-lints.yml  python-publish.yml  python-tests.yml
0.1.0/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.1.0/_modules/: index.html
0.1.0/_sources/: tutorials.md.txt
0.1.0/api/: decomon.backward_layers.html  decomon.html  decomon.layers.html  decomon.metrics.html  decomon.models.html  decomon.types.html  modules.html
0.1.1/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.1.1/_modules/: index.html
0.1.1/_sources/: install.md.txt  tutorials.md.txt
0.1.1/api/: decomon.backward_layers.html  decomon.html  decomon.layers.html  decomon.metrics.html  decomon.models.html  decomon.types.html  modules.html
0.2.0/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
0.2.0/_modules/: index.html
0.2.0/_sources/: tutorials.md.txt
0.2.0/api/: decomon.backward_layers.html  decomon.html  decomon.layers.html  decomon.metrics.html  decomon.models.html  decomon.types.html  modules.html
0.2.1/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  py-modindex.html  search.html  tutorials.html
0.2.1/_modules/: index.html
0.2.1/_sources/: contribute.md.txt  tutorials.md.txt
0.2.1/api/: decomon.backward_layers.html  decomon.html  decomon.layers.html  decomon.metrics.html  decomon.models.html  decomon.types.html  modules.html
binder/: environment.yml  postBuild
decomon/: __init__.py  utils.py  wrapper.py  wrapper_.py  wrapper_with_tuning.py
decomon/applications/: vgg16.py
decomon/backward_layers/: __init__.py  activations.py  backward_layers.py  backward_maxpooling.py  backward_merge.py  core.py  deel_lip.py  draft.py  utils.py
decomon/corners/: __init__.py  slope.py  utils.py
decomon/gradient/: core.py  gradient_layers.py  utils.py
decomon/layers/: __init__.py  activations.py  core.py  decomon_layers.py  decomon_merge_layers.py  decomon_reshape.py  deel_lip.py  maxpooling.py  old_conv.py  reading_nnet_acas_2_numpy.py  utils.py
decomon/loading/: load_onnx.py
decomon/metrics/: __init__.py  complexity.py  coverage.py  loss.py  metric.py  utils.py
decomon/models/: __init__.py  backward_cloning.py  cloning.py  convert.py  decomon_sequential.py  draft.py  draft_backward_cloning.py  draft_cloning_bis.py  forward_cloning.py  models.py  old_backward_cloning.py  old_forward_cloning.py  tmp_clone_backward.py  utils.py
decomon/numpy/: __init__.py
decomon/types/: __init__.py
docs/: README.md  generate_nb_index.py  requirements.txt
docs/source/: conf.py  contribute.md  getting_started.md  index.md  tutorials.template.md
main/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
main/_modules/: index.html
main/_sources/: contribute.md.txt  getting_started.md.txt  index.md.txt  install.md.txt  tutorials.md.txt
main/_static/: versions.js
main/api/: decomon.applications.cv.html  (+10 more)
scripts/: md2py.py
tests/: __init__.py  backward_activation.py  backward_conv.py  backward_dense.py  backward_layers.py  backward_model.py  backward_native_layers.py  backward_pooling.py  backward_utils.py  clone_backward.py  clone_forward.py  complementary_backward_model.py  conftest.py  conv_test.py  deel_lip_tests.py  dense_layer.py  pooling_test.py  test_activation.py  test_backward_activation.py  test_backward_compute_output_shape.py  test_backward_conv.py  test_backward_dense.py  test_backward_layer_wo_merge.py  test_backward_layers.py  test_backward_layers_get_config.py  test_backward_merge.py  test_backward_model.py  test_backward_native_layers.py  test_backward_pool.py  test_backward_pooling.py  test_backward_utils.py  test_backward_utils_conv.py  test_clone.py  test_clone_backward.py  test_clone_forward.py  test_complementary_backward_model.py  test_conv.py  test_convert_backward.py  test_convert_forward.py  test_crown_layers_get_config.py  (+37 more)
tutorials/: tutorial1_sinus-interactive.ipynb  tutorial2_noise_sensor.ipynb  tutorial3_adversarial_attack.ipynb  tutorial3_adversarial_attack_Gradient.ipynb  tutorial4_adversarial_brightness.ipynb  tutorial4_certified_over_estimation.ipynb  tutorial_4_certified_training.ipynb
(+280 files in other folders)
